# json

./: .gitignore  .gitmodules  CMakeLists.txt  COMMENTARY.md  JSON.c  JSON.sln  JSON.vcxproj  JSON.vcxproj.filters  LICENSE  Makefile  README.md  TODO  array_example  array_test  example.json  example2.json  example3.json  json.c  json_test  json_test.c  main.c  test_output.txt
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
cmake/: json-config-version.cmake  json-config.cmake
include/: JSON.h
include/JSON/: JSON.h  json.h
include/dict/: dict.h
include/json/: json.h  json_test.h
parse test cases/pass/array/: array_floats.json  array_matrix.json
parse test cases/pass/float/: float_min.json
parse test cases/pass/object/: object_array_objects.json  object_mixed_values.json
parse test cases/pass/string/: string_whitespaces_abc.json
test cases/: implemented test cases.txt
test cases/fail/float/: float_max.json
test cases/parse/fail/float/: float_min.json
test cases/parse/pass/object/: object_false.json  object_object_object.json  object_recursive.json  object_string.json  object_strings.json
test cases/parse/pass/string/: string_quote_abc_quote.json
test cases/pass/array/: array_object.json  array_tensor.json
test cases/pass/float/: float_min.json
test cases/pass/object/: object_array.json  object_array_object.json  object_array_recursive.json  object_cases.txt  object_float.json  object_object.json  object_true.json  object_whitespace.json  object_whitespace_legible.json
test cases/pass/string/: string_cases.txt
